<resources>
    <string name="app_name">NGS_Test_Login</string>

    //Login Page
    <string name="welcome">Welcome to App Name</string>
    <string name="email_cont">Continue with Email</string>
    <string name="google_cont">Continue with Google</string>
    <string name="terms">By continuing, You agree with <a href ="https://dev.taskpal.com/">Terms and Conditions</a>
        and <a href = "https://dev.taskpal.com/">Privacy Policy</a> of TaskPal.</string>

    <string name="email_ask">Your Email?</string>
    <string name="email_sample">For sample@sample.com</string>
    <string name="email_wrong">Wrong Email</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="password_forgot">Forgot Password?</string>

    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="signup_sample">Sign up with sample@sample.com</string>


    //Main
    <string name="shortcuts">Shortcuts</string>
    <string name="lists">Lists</string>
    <string name="chats">Chats</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>

    <string name="lists_notif">You have no lists yet</string>
    <string name="shortcuts_notif">You have no shortcuts yet</string>
    <string name="chats_notif">You have no chats yet</string>
    <string name="search_notif">Search for tasks or comments</string>
    <string name="add_folder">Add Folder</string>

    //Main Add
    <string name="add_new">Add new</string>
    <string name="add_list">Add List</string>
    <string name="add_chat">Add Chat</string>

    //Main List
    <string name="users">Users</string>
    <string name="sort">Sort Out</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    //Main Task/Comments/Attachments
    <string name="assign_to">Assign To</string>
    <string name="remind_me">Remind Me</string>
    <string name="due_date">Due Date</string>
    <string name="add_note">Add Note</string>
    <string name="message_copy">Copy</string>
    <string name="message_edit">Edit</string>
    <string name="message_delete">Delete</string>

    //Profile
    <string name="settings">Settings</string>
    <string name="gen_settings">General Settings</string>
    <string name="user_settings">User Settings</string>
    <string name="backups">Backups</string>
    <string name="upgrade">Upgrade</string>
    <string name="imp">Import</string>

    //Profile General Settings
    <string name="language">Language</string>
    <string name="homepage">Homepage</string>
    <string name="date_format">Date Format</string>
    <string name="time_format">Time Format</string>
    <string name="week_start">Week Start</string>
    <string name="expand_subtask">Expand Subtasks by Default</string>
    <string name="add_task">Add Task</string>
    //Shortcuts
    <string name="inbox">Inbox</string>
    <string name="today">Today</string>
    <string name="assigned_to_me">Assigned to Me</string>
    <string name="high_priority">High Priority</string>
    <string name="medium_priority">Medium Priority</string>
</resources>