<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_folder"
        android:icon="@drawable/ic_folder"
        app:iconTint="@color/light_pink"
        android:title="@string/add_folder"
        app:showAsAction="ifRoom"
        tools:targetApi="o" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        app:iconTint="@color/light_pink"
        android:title="@string/search_notif"
        app:showAsAction="ifRoom"
        tools:targetApi="o" />

    <item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_account"
        app:iconTint="@color/light_pink"
        android:title="@string/account"
        app:showAsAction="ifRoom"
        tools:targetApi="o" />

</menu>