<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar_email"
        android:navigationIcon="@drawable/ic_action_back_button"/>

    <TextView
        android:id="@+id/textView_your_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_email"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:text="@string/email_ask"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editText_email_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_your_email"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        app:boxStrokeColor="@color/light_pink"
        app:boxStrokeWidth="1dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/light_pink"
        app:hintTextColor="@color/light_pink">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_email_cont"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/editText_email_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:textColor="@color/white"
        app:icon="@android:drawable/ic_dialog_email"
        app:iconGravity="textStart"
        android:text="@string/email_cont"
        android:textSize="18sp" />

</RelativeLayout>