<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_main_info_cardView"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile_main_info_layout"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <RelativeLayout
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:background="@color/light_blue">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="N"
                    android:textSize="56sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:id="@+id/profile_main_info_name"
                    android:textAppearance="@style/TextAppearance.NGS_Profile.TextAppearance.Heading"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_main_info_name"
                    android:text="@string/email"
                    android:layout_margin="4dp"
                    android:textAppearance="@style/TextAppearance.NGS_Profile.TextAppearance.Small"/>
            </RelativeLayout>
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_forward_angled"
                android:layout_weight="0.1"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_options_cardView"
        android:layout_below="@+id/profile_main_info_cardView"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile_options_layout"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:srcCompat = "@drawable/ic_settings"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_settings"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.NGS_Profile.TextAppearance.Normal"/>
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_forward_angled"
                    android:layout_weight="0.1"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="40dp"
                android:background="@color/light_grey"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:srcCompat = "@drawable/ic_backups"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/backups"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.NGS_Profile.TextAppearance.Normal"/>
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_forward_angled"
                    android:layout_weight="0.1"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="40dp"
                android:background="@color/light_grey"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:srcCompat = "@drawable/ic_upgrade"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upgrade"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.NGS_Profile.TextAppearance.Normal" />
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_forward_angled"
                    android:layout_weight="0.1"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="40dp"
                android:background="@color/light_grey"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat = "@drawable/ic_notif"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notifications"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.NGS_Profile.TextAppearance.Normal"/>
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_forward_angled"
                    android:layout_weight="0.1"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_import_cardView"
        android:layout_margin="10dp"
        android:layout_below="@+id/profile_options_cardView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat = "@drawable/ic_import"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.NGS_Profile.TextAppearance.Normal"/>
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_forward_angled"
                android:layout_weight="0.1"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>