<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main_task_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/main_task_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/black"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:navigationIconTint="@color/black"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"/>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/main_task_actions_layout"
        android:layout_below="@+id/main_task_toolbar_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_task_assignTo_image_layout"
                    android:background="@color/beige">
                    <ImageView
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_assign"
                        app:tint="@color/white" />
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/assign_to"
                    android:textSize="16sp"
                    android:layout_toEndOf="@+id/main_task_assignTo_image_layout"
                    android:layout_marginStart="4dp" />
            </RelativeLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_task_remindMe_image_layout"
                    android:background="@color/beige">
                    <ImageView
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_remind"
                        app:tint="@color/white"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/remind_me"
                    android:textSize="16sp"
                    android:layout_toEndOf="@id/main_task_remindMe_image_layout"
                    android:layout_marginStart="4dp"/>
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_task_dueDate_image_layout"
                    android:background="@color/beige">
                    <ImageView
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_calendar"
                        app:tint="@color/white"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/due_date"
                    android:textSize="16sp"
                    android:layout_toEndOf="@id/main_task_dueDate_image_layout"
                    android:layout_marginStart="4dp"/>
            </RelativeLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey"/>

            <RelativeLayout
                android:id="@+id/main_task_addNote_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_task_addNote_image_layout"
                    android:background="@color/beige">
                    <ImageView
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_edit"
                        app:tint="@color/white"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/add_note"
                    android:textSize="16sp"
                    android:layout_toEndOf="@+id/main_task_addNote_image_layout"
                    android:layout_marginStart="4dp"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/fragment_main_task_tabLayout"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginVertical="4dp"
        android:layout_marginHorizontal="56dp"
        android:background="@drawable/tab_indicator_layout"
        android:layout_below="@+id/main_task_actions_layout"
        android:elevation="1dp"
        app:tabSelectedTextColor="@color/black"
        app:tabIndicator="@drawable/tab_indicator"
        app:tabIndicatorHeight="20dp"
        app:tabIndicatorColor="@null"
        app:tabIndicatorGravity="center"
        app:tabPaddingStart="8dp"
        app:tabPaddingEnd="8dp"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/fragment_main_task_viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/main_task_actions_layout"/>
</RelativeLayout>